# ALPaCA_python

./: .gitignore  LICENSE.md  README.md  pyproject.toml
alpaca/: __init__.py
alpaca/cli/: run.py
alpaca/models/: __init__.py  make_predictions.py
alpaca/preprocessing/: __init__.py  minimal_preprocess.py  normalize.py  pipeline.py
alpaca/utils/: __init__.py  extract_patch.py  rotate_patch.py
scripts/: run_single.py
src/alpaca/: __init__.py  inference.py  logger.py  processing.py  utils.py
src/alpaca/cli/: download_models.py  run.py
src/cli/: download_models.py  run.py
src/preprocessing/: erode.py  normalize.py  pipeline.py
