[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca"
version = "1.0.1"
description = "ALPaCA: Automated Lesion, PRL, and CVS Analysis"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "torch",
    "nibabel",
    "pandas",
    "scipy",
    "scikit-image",
    "rich",
]

[project.scripts]
alpaca-download-models = "alpaca.cli.download_models:main"
alpaca-run = "alpaca.cli.run:main"

[tool.setuptools.packages.find]
where = ["src"]